--- a/style.css
+++ b/style.css
@@ -1,5 +1,56 @@
 body{
     margin: 0;
     padding: 0;
-    
+    font-family: 'Open Sans', sans-serif;
+}
+
+button{
+    border: none;
+    padding: 15px 20px;
+}
+.primary-color{
+    color:#FD6E0A;
+}
+.primary-button{
+    background-color: #FD6E0A;
+    padding: 15px 35px;
+    color: #ffffff;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+ nav h2, span.primary-color{
+    font-size: 32px;
+    font-weight: 800;
+
+}
+nav ul{
+    display: flex;
+    align-items: center;
+}
+nav ul li{
+    list-style: none;
+    margin-right: 50px;
+
+}
+nav ul li a{
+    text-decoration: none;
+    padding: 15px 20px;
+    display: block;
+    color:#616161;    
+}
+
+.header{
+    background: #FFF8F3;
+}
+.banner{
+    display: flex;
+    align-items: center;
+    padding:80px 30px 40px 380px;
 }
