--- a/style.css
+++ b/style.css
@@ -1,56 +1,145 @@
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
 
-button{
+button {
     border: none;
     padding: 15px 20px;
 }
-.primary-color{
-    color:#FD6E0A;
+
+.primary-color {
+    color: #FD6E0A;
 }
-.primary-button{
+
+.primary-button {
     background-color: #FD6E0A;
     padding: 15px 35px;
     color: #ffffff;
     font-size: 18px;
     border-radius: 5px;
     cursor: pointer;
+    text-decoration: none;
+
 
 }
+
+.gray-primary {
+    color:  #757575;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 150% */
+}
+
 nav {
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
- nav h2, span.primary-color{
+
+nav h2,
+span.primary-color {
     font-size: 32px;
     font-weight: 800;
 
 }
-nav ul{
+
+nav ul {
     display: flex;
     align-items: center;
 }
-nav ul li{
+
+nav ul li {
     list-style: none;
     margin-right: 50px;
 
 }
-nav ul li a{
+
+nav ul li a {
     text-decoration: none;
     padding: 15px 20px;
     display: block;
-    color:#616161;    
+    color: #616161;
 }
 
-.header{
+.header {
     background: #FFF8F3;
+    background-image: url(images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    margin: 0;
+    padding: 0;
+
 }
-.banner{
+
+.banner {
     display: flex;
     align-items: center;
-    padding:80px 30px 40px 380px;
+    justify-content: space-between;
+    padding: 10px 30px 0px 380px;
+}
+
+.banner .content {
+    max-width: 500px;
+}
+
+.banner .content>h3 {
+    font-size: 45px;
+    color: #474747;
+    line-height: 1;
+    margin: 0;
+    padding: 0;
+}
+
+.banner .content>h2 {
+    color: #181818;
+    font-family: Open Sans;
+    font-size: 85px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1;
+    margin: 0;
+    padding: 0;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+/* .wrapper{
+    width:980px;
+    margin:auto;
+} */
+section {
+    margin: 80px 280px;
+    background-color: #FD6E0A;
+    border-radius: 15px;
+
+}
+
+.section-title {
+    text-align: center;
+    font-size: 22px;
+}
+.about{
+    padding:30px 180px;
+}
+
+.about .content p {
+    text-align: center;
+}
+
+.contact-info {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.contact-section span {
+    display: block;
+    align-items: center;
+    justify-content: space-around;
 }
